# ncmdump.rs

./: .editorconfig  .gitignore  Cargo.toml  README.cn.md  README.md
.github/workflows/: deploy.yml  release.yml  rust.yml  test.yml
crates/ncmdump/: Cargo.toml
crates/ncmdump-bin/: Cargo.toml
crates/ncmdump-bin/src/: command.rs  errors.rs  main.rs  metadata.rs  provider.rs  state.rs  utils.rs
crates/ncmdump/examples/: ncmdump.rs  ncmdump_by_read.rs  qcmdump.rs
crates/ncmdump/res/: test.ncm
crates/ncmdump/src/: lib.rs  ncmdump.rs  qmcdump.rs  tag.rs  utils.rs
examples/: ncmdump.rs  ncmdump_by_read.rs  qcmdump.rs
src/: decrypt.rs  deprecated.rs  error.rs  errors.rs  lib.rs  main.rs  ncmdump.rs  qmcdump.rs  tools.rs  utils.rs
tests/: test.qmcflac
