[package]
name = "ncmdump"
version = "0.6.1"
authors = ["iqiziqi <iqiziqi@outlook.com>"]
edition = "2021"

description = "Some copyright protection file dump."
homepage = "https://github.com/iqiziqi/ncmdump.rs"
documentation = "https://docs.rs/ncmdump"
repository = "https://github.com/iqiziqi/ncmdump.rs"
license = "MIT"
readme = "README.md"
keywords = ["ncm", "qmc", "music", "dump"]
exclude = [
    ".editorconfig",
    ".github/**/*",
    "*.ncm"
]

[workspace]
members = ["crates/ncmdump"]

[[bin]]
name = "ncmdump"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.1", features = ["derive"] }
crossbeam-channel = "0.5.7"
glob = "^0.3"
indicatif = "^0.17"
thiserror = "^1.0"
ncmdump = { path = "crates/ncmdump", features = ["ncmdump", "qmcdump", "utils"] }
