[workspace]
members = ["crates/ncmdump", "crates/ncmdump-bin"]
resolver = "2"

[workspace.package]
authors = ["iqiziqi <iqiziqi@outlook.com>"]
edition = "2021"

description = "Some copyright protection file dump."
homepage = "https://github.com/iqiziqi/ncmdump.rs"
documentation = "https://docs.rs/ncmdump"
repository = "https://github.com/iqiziqi/ncmdump.rs"
license = "MIT"
readme = "README.md"
keywords = ["ncm", "qmc", "music", "dump"]

[workspace.dependencies]
anyhow = "^1.0"
ncmdump = { path = "crates/ncmdump" }
