[package]
name = "ncmdump-bin"
version = "0.6.0"
authors = { workspace = true }
edition = { workspace = true }

description = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "ncmdump"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "^4.1", features = ["derive"] }
crossbeam-channel = "0.5.7"
glob = "^0.3"
indicatif = "^0.17"
thiserror = "^1.0"
ncmdump = { workspace = true }
metaflac = "0.2.5"
id3 = "1.9.0"
