[package]
name = "ncmdump"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

description = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
exclude = [
    ".editorconfig",
    ".github/**/*",
    "res/*",
    "examples/*",
    "*.ncm"
]

[dependencies]
aes = "^0.8"
base64 = "^0.21"
cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = ['ncmdump', 'qmcdump', 'utils']
ncmdump = []
qmcdump = []
deprecate = []
utils = []

[[example]]
name = "ncmdump"
path = "examples/ncmdump.rs"

[[example]]
name = "qmcdump"
path = "examples/qcmdump.rs"

[[example]]
name = "ncmdump_by_read"
path = "examples/ncmdump_by_read.rs"
